# guru_test

./: .env_example  .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
guru_test/: asgi.py  settings.py  urls.py  wsgi.py
service/: filters.py  models.py  serializers.py  views.py
service/migrations/: 0001_initial.py  0002_alter_city_name_alter_shop_closing_alter_shop_house_and_more.py  0003_alter_shop_city_alter_shop_closing_and_more.py
